@@ -46,6 +46,8 @@ https://github.com/elastic/beats/compare/v6.0.0-beta1...master[Check the HEAD di
 
 *Metricbeat*
 
+- Add support to exclude labels from kubernetes pod metadata. {pull}4757[4757]
+
 *Packetbeat*
 
 *Winlogbeat*
